--- a/16_ruby_rubocop/.rubocop.yml
+++ b/16_ruby_rubocop/.rubocop.yml
@@ -1,10 +1,10 @@
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
 
-Layout/AlignHash:
+Layout/HashAlignment:
   Enabled: true
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
